--- a/web/public/index.html
+++ b/web/public/index.html
@@ -3,15 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#39393A" />
+    <meta name="theme-color" content="#6514A4" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <title>Finance</title>
-
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
